@@ -1,3 +1,12 @@
+2003-02-10  Chris Blumenberg  <cblu@apple.com>
+
+	Fixed: 3168888 - REGRESSION: many downloads fail (due to -36 error from write)
+
+        Reviewed by darin.
+
+        * Downloads.subproj/WebDownload.m:
+        (-[WebDownload writeForkData:isDataFork:]):
+
 2003-02-10  Trey Matteson  <trey@apple.com>
 
 	Make sure we have a FormsDelegate installed with NOP behavior if our client
